--- a/nginxGunicorn.conf
+++ b/nginxGunicorn.conf
@@ -7,7 +7,7 @@ pid /run/nginx.pid;
 include /usr/share/nginx/modules/*.conf;
 
 events {
-  worker_connections 5;
+  worker_connections 8;
   accept_mutex off;
   use epoll;
 }
@@ -21,7 +21,7 @@ http {
 
     sendfile            on;
     tcp_nopush          on;
-    keepalive_timeout   10;
+    keepalive_timeout   15;
     types_hash_max_size 4096;
     server_tokens off;
 
@@ -44,9 +44,20 @@ http {
   }
 
   server {
-    listen 80;
-    listen [::]:80;
-    server_name kallol.live www.kallol.live;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    # http2 on;
+
+    ssl_certificate /var/www/cloudflare/kallol.live.pem;
+    ssl_certificate_key /var/www/cloudflare/kallol.live.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-PO>
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_session_tickets off;
+
+    server_name kallol.live sms.kallol.live;
 
     client_max_body_size 1M;
     root /var/www/kallol.live;
