--- a/nginxGunicorn.conf
+++ b/nginxGunicorn.conf
@@ -13,27 +13,34 @@ events {
 }
 
 http {
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+  access_log  /var/log/nginx/access.log  main;
 
-    sendfile            on;
-    tcp_nopush          on;
-    keepalive_timeout   15;
-    types_hash_max_size 4096;
-    server_tokens off;
+  sendfile            on;
+  tcp_nopush          on;
+  keepalive_timeout   15;
+  types_hash_max_size 4096;
+  server_tokens off;
 
-    include             /etc/nginx/mime.types;
-    default_type        application/octet-stream;
+  include             /etc/nginx/mime.types;
+  default_type        application/octet-stream;
 
-    # Load modular configuration files from the /etc/nginx/conf.d directory.
-    # See http://nginx.org/en/docs/ngx_core_module.html#include
-    # for more information.
-    include /etc/nginx/conf.d/*.conf;  
+  # Load modular configuration files from the /etc/nginx/conf.d directory.
+  # See http://nginx.org/en/docs/ngx_core_module.html#include
+  # for more information.
+  include /etc/nginx/conf.d/*.conf;
+
+  # Make sure to set "user_bucket" cookie when user logs in.
+  map $cookie_user_bucket $user_bucket {
+    "" $remote_addr; # if cookie empty, return client’s IP.
+    default $cookie_user_bucket;
+  }
 
   upstream app_server {
+    hash $user_bucket consistent;
     server 127.0.0.1:8000 fail_timeout=0;
   }
 
@@ -51,8 +58,8 @@ http {
     ssl_certificate /var/www/cloudflare/kallol.live.pem;
     ssl_certificate_key /var/www/cloudflare/kallol.live.key;
     ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-PO>
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
     ssl_session_tickets off;
@@ -60,13 +67,20 @@ http {
     server_name kallol.live sms.kallol.live;
 
     client_max_body_size 1M;
-    root /var/www/kallol.live;
 
-    location / {
-      try_files $uri @proxy_to_app;
+    location ~ /\.(?!well-known) {
+        deny all;
     }
 
-    location @proxy_to_app {
+    location /static/ {
+      # Make sure to give nginx read permission.
+      alias /var/www/staticfiles/;
+      access_log off;
+      error_log off;
+      autoindex off;
+    }
+
+    location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $http_host;
