--- a/nginxGunicorn.conf
+++ b/nginxGunicorn.conf
@@ -44,10 +44,46 @@ http {
     server 127.0.0.1:8000 fail_timeout=0;
   }
 
+  upstream ml_server {
+    hash $user_bucket consistent;
+    server 127.0.0.1:8080 fail_timeout=0;
+  }
+
   server {
     listen 80 default_server;
     server_name _;
     return 301 https://$host$request_uri;
+  }
+
+  server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    # http2 on;
+
+    ssl_certificate /var/www/cloudflare/kallol.live.pem;
+    ssl_certificate_key /var/www/cloudflare/kallol.live.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_session_tickets off;
+
+    server_name ml.kallol.live;
+
+    client_max_body_size 1M;
+
+    location ~ /\.(?!well-known) {
+        deny all;
+    }
+
+    location / {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+      proxy_pass http://ml_server;
+    }
   }
 
   server {
